[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "os-titlecard"
version = "0.1.0"
description = "A minimal TTY titlecard"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
	"printy",
	"pyfiglet"
]

[project.scripts]
titlecard = "titlecard.cli:main"
